[tool.poetry]
name = "purge"
version = "0.1.0"
description = ""
authors = ["ville <ville.reima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
tinydb = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.376"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
